# Shadow-Gate

./: .env.example  .gitignore  README (5).md  README.md  ai_client.py  data_generator.py  database.py  demomo.py  entry-points.json  main.py  project.uiproj  pyproject.toml  requirements.txt  shadowgate.mermaid  test_slack.py  uipath.json
.agent/: SDK_REFERENCE.md
.uipath/: .auth.json  .error_log  studio_metadata.json
agents/: ai_behavior_validator.py  change_watcher.py  chaos_agent.py  coverage_intelligence.py  deployment_readiness.py  environment_simulator.py  governance_logger.py  release_guardian.py  test_health.py  validator.py
api/: patient_intake.py
dashboard/: dashboard_data.json  export_data.py  index.html
governance/: governance_report_20260624_212619.json  governance_report_20260624_213648.json  governance_report_20260624_214742.json  governance_report_20260625_072518.json  governance_report_20260625_072626.json  governance_report_20260625_072807.json  governance_report_20260626_191348.json  governance_report_20260627_134948.json  governance_report_20260627_140519.json  governance_report_20260627_141147.json  governance_report_20260627_142958.json  governance_report_20260627_150920.json  governance_report_20260627_151718.json  governance_report_20260627_155403.json  governance_report_20260627_155818.json  governance_report_20260627_160158.json  governance_report_20260627_160530.json  governance_report_20260627_161103.json  governance_report_20260627_163429.json  governance_report_20260627_164458.json  governance_report_20260627_184012.json  (+47 more)
(+15 files in other folders)
