[project]
name = "shadowgate"
version = "1.0.0"
description = "AI-powered hospital automation testing platform. Tests ARIA, SAFE, GUARDIAN and CARA automations. Discovers unknown risks nobody thought to test."
requires-python = ">=3.12"
authors = [{ name = "Aishwarya Lakshmi S" }]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

